--- a/src/app.css
+++ b/src/app.css
@@ -35,12 +35,12 @@
 
 /* TASK */
 .task {
-  padding: 1.5rem;
+  /* padding: 1.5rem;
   background-color: #fff;
   border-radius: 5px;
   line-height: 1.5;
   margin-top: 1rem;
-  box-shadow: 0 4px 5px 0 rgb(0 0 0 / 10%);
+  box-shadow: 0 4px 5px 0 rgb(0 0 0 / 10%); */
 }
 
 .task h3 {
@@ -69,7 +69,7 @@
   display: inline-block;
   padding: 5px 12px;
   font-size: 14px;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(204, 204, 204);
   margin-right: 4px;
   margin-bottom: 6px;
   border-radius: 30px;
