--- a/src/app.css
+++ b/src/app.css
@@ -35,7 +35,7 @@
 
 /* TASK */
 .task {
-  /* padding: 1.5rem;
+  /* padding: 1.5rem; dfwqEGWrg
   background-color: #fff;
   border-radius: 5px;
   line-height: 1.5;
